--- a/underbar-test/SpecRunner.html
+++ b/underbar-test/SpecRunner.html
@@ -12,7 +12,7 @@
     <script src="lib/testSupport.js"></script>
 
     <!-- Source files -->
-    <script src="src/underbar.js"></script>
+    <script src="src/underbar2.js"></script>
     <!-- End source files -->
 
     <!-- Test files -->
